# signalview

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Kline.html  README.md  constants.py  data.py  diagnose_sql.py  flight_kline_client.py  ma_check.json  ma_data_check.json  nested_2bc.py  performance.py  performance_table.py  pyproject.toml  reports_server.py  requirements.txt  sector_data.py  signal_check.json  signal_check2.json  signal_constants.py  signal_final.json  srcdoc_check.json  streamlit_app.py  symbol_picker.py  test_conn.py  title_check.json  title_check2.json  topic_nested_2bc.py  utils.py  verify_final.json
.streamlit/: config.toml  secrets.toml.example
app_pages/: __init__.py  _kline_common.py  active_vol_then_nestedbc.py  alert_rule_crud.py  all_signals_by_symbol.py  backtest_reports.py  dashboard.py  dashboard_as.py  dashboard_binance.py  dashboard_em.py  instrument_groups.py  kline.py  kline_charts.py  kline_fullscreen.py  main_then_yd.py  ml_scores.py  nested_bc.py  overview.py  performance.py  profit_pattern_cl3b_zsx.py  review_em.py  review_hotspot.py  review_index.py  review_key.py  review_today.py  search_signals.py  sector_signals.py  today_opportunities.py
scripts/: AGENTS.md  query_signals.py
signalml/: .env.example  README.md  pyproject.toml
signalml/scripts/: demo_factor_preview.py
signalml/src/signalml/: AGENTS.md  __init__.py  __main__.py  backtest.py  cli.py  dates.py  db.py  features.py  features_kline.py  features_resonance.py  flight_kline.py  labels.py  predict.py  prices.py  train.py
tests/: test_kline_url.py
views/: active_vol_then_nested_bc.py  active_vol_then_nestedbc.py  alert_rule_crud.py  all_signals_by_symbol.py  backtest_reports.py  dashboard.py  dashboard_as.py  dashboard_backup.py  dashboard_binance.py  dashboard_em.py  dashboard_inconsistent.py  dashboard_old.py  dashboard_temp.py  instrument_groups.py  kline.py  kline_charts.py  kline_fullscreen.py  main_then_yd.py  ml_scores.py  nested_bc.py  overview.py  performance.py  performance_cl3b_macd.py  performance_cmp_em.py  performance_cmp_ths.py  review_em.py  (+12 more)
(+15 files in other folders)
