[project]
name = "signalview"
version = "0.1.0"
description = "Streamlit app for trading signals and performance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "psycopg[binary]",
    "akshare",
    "rapidfuzz",
    "pypinyin",
]

[tool.uv]
dev-dependencies = []
