[project]
name = "signalview"
version = "0.1.0"
description = "Streamlit app for trading signals and performance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "psycopg[binary]",
    "akshare",
    "rapidfuzz",
    "pypinyin",
    "streamlit-antd-components>=0.3.2",
]

[project.optional-dependencies]
ml = ["signalml"]

[tool.uv.sources]
signalml = { path = "signalml", editable = true }

[tool.uv]
dev-dependencies = []

