[project]
name = "signalview"
version = "0.1.0"
description = "Streamlit app for trading signals and performance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.59,<2.0",
    "psycopg[binary]",
    "akshare",
    "rapidfuzz",
    "pypinyin",
    "streamlit-antd-components>=0.3.2",
    "plotly>=5.18",
]

[project.optional-dependencies]
ml = ["signalml"]

[tool.uv.sources]
signalml = { path = "signalml", editable = true }

[tool.uv]
dev-dependencies = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

